--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
+output/
 *.out
 
 # Dependency directories (remove the comment below to include it)
+deps/
 # vendor/
