--- a/data/mock/node3/conf/server.yaml
+++ b/data/mock/node3/conf/server.yaml
@@ -1,5 +1,13 @@
 # Rpc service listen port
-rpcPort: 36103
+rpcPort: 36203
+# AdapterRpcPort
+adapterRpcPort: 36303
+# AdapterGWPort
+adapterGWPort: 36603
+# MetricPort
+metricPort: 36803
+# EnableAdapter
+enableAdapter: true
 # Set the max message size in bytes the server can receive.
 # If this is not set, gRPC uses the default 4MB.
 maxRecvMsgSize: 134217728
