--- a/conf/server.yaml
+++ b/conf/server.yaml
@@ -2,12 +2,19 @@
 rpcPort: 36201
 # AdapterRpcPort
 adapterRpcPort: 36301
+# EndorserRpcPort
+endorserRpcPort: 36401
 # AdapterGWPort
 adapterGWPort: 36601
 # MetricPort
 metricPort: 36801
 # EnableAdapter
 enableAdapter: true
+# EnableEndorser
+enableEndorser: true
+## EndorserHosts
+endorserHosts:
+  - "127.0.0.1:8848"
 # Set the max message size in bytes the server can receive.
 # If this is not set, gRPC uses the default 4MB.
 maxRecvMsgSize: 134217728
