--- a/data/mock/node2/conf/server.yaml
+++ b/data/mock/node2/conf/server.yaml
@@ -2,12 +2,19 @@
 rpcPort: 36202
 # AdapterRpcPort
 adapterRpcPort: 36302
+# EndorserRpcPort
+endorserRpcPort: 36402
 # AdapterGWPort
 adapterGWPort: 36602
 # MetricPort
 metricPort: 36802
 # EnableAdapter
 enableAdapter: true
+# EnableEndorser
+enableEndorser: true
+## EndorserHosts
+endorserHosts:
+  - "127.0.0.1:8848"
 # Set the max message size in bytes the server can receive.
 # If this is not set, gRPC uses the default 4MB.
 maxRecvMsgSize: 134217728
