--- a/data/mock/node3/conf/server.yaml
+++ b/data/mock/node3/conf/server.yaml
@@ -2,12 +2,19 @@
 rpcPort: 36203
 # AdapterRpcPort
 adapterRpcPort: 36303
+# EndorserRpcPort
+endorserRpcPort: 36403
 # AdapterGWPort
 adapterGWPort: 36603
 # MetricPort
 metricPort: 36803
 # EnableAdapter
 enableAdapter: true
+# EnableEndorser
+enableEndorser: true
+## EndorserHosts
+endorserHosts:
+  - "127.0.0.1:8848"
 # Set the max message size in bytes the server can receive.
 # If this is not set, gRPC uses the default 4MB.
 maxRecvMsgSize: 134217728
